--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "campaignchain/activity-mailchimp",
     "description": "Add upcoming newsletter campaign",
+    "keywords": ["mailchimp","campaignchain"],
     "type": "campaignchain-activity",
     "license": "Apache-2.0",
     "homepage": "http://www.campaignchain.com",
