--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         "docs": "http://doc.campaignchain.com"
     },
     "require": {
-        "campaignchain/core": "1.0.0-beta.2",
-        "campaignchain/location-mailchimp": "1.0.0-beta.2",
-        "campaignchain/operation-mailchimp": "1.0.0-beta.2",
-        "campaignchain/hook-due": "1.0.0-beta.2"
+        "campaignchain/core": "dev-master",
+        "campaignchain/location-mailchimp": "dev-master",
+        "campaignchain/operation-mailchimp": "dev-master",
+        "campaignchain/hook-due": "dev-master"
     },
     "autoload": {
         "psr-4": { "CampaignChain\\Activity\\MailChimpBundle\\": "" }
