CampaignChain/campaignchain#125 Publishing now from modal in timeline not working and no notification about the publishign

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -40,3 +40,4 @@ services:
             - "@session"
             - "@templating"
             - "@router"
+            - "@campaignchain.core.util.scheduler"
