--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -13,33 +13,33 @@
 # limitations under the License.
 
 campaignchain_activity_mailchimp_new:
-    pattern: /activity/mailchimp/new
+    path: /activity/mailchimp/new
     defaults: { _controller: campaignchain.activity.controller.mailchimp.schedule:newAction }
 
 campaignchain_activity_mailchimp_edit:
-    pattern: /activity/mailchimp/{id}/edit
+    path: /activity/mailchimp/{id}/edit
     defaults: { _controller: campaignchain.activity.controller.mailchimp.schedule:editAction }
 
 campaignchain_activity_mailchimp_edit_modal:
-    pattern: /modal/activity/mailchimp/{id}/edit
+    path: /modal/activity/mailchimp/{id}/edit
     defaults: { _controller: campaignchain.activity.controller.mailchimp.schedule:editModalAction }
 
 campaignchain_activity_mailchimp_edit_api:
-    pattern: /api/private/activity/mailchimp/byactivity/{id}/edit
+    path: /api/private/activity/mailchimp/byactivity/{id}/edit
     defaults: { _controller: campaignchain.activity.controller.mailchimp.schedule:editApiAction }
     options:
         expose: true
 
 campaignchain_activity_mailchimp_read:
-    pattern: /activity/mailchimp/{id}
+    path: /activity/mailchimp/{id}
     defaults: { _controller: campaignchain.activity.controller.mailchimp.schedule:readAction }
 
 campaignchain_activity_mailchimp_read_modal:
-    pattern: /modal/activity/mailchimp/{id}
+    path: /modal/activity/mailchimp/{id}
     defaults: { _controller: campaignchain.activity.controller.mailchimp.schedule:readModalAction }
     options:
         expose: true
 
 campaignchain_activity_mailchimp_preview:
-    pattern: /activity/mailchimp/preview/{id}
+    path: /activity/mailchimp/preview/{id}
     defaults: { _controller: CampaignChainActivityMailChimpBundle:MailChimp:preview }
