CampaignChain/campaignchain#424 Upgrade to Symfony 3.x

--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         "docs": "http://doc.campaignchain.com"
     },
     "require": {
-        "campaignchain/core": "dev-master",
-        "campaignchain/location-mailchimp": "dev-master",
-        "campaignchain/operation-mailchimp": "dev-master",
-        "campaignchain/hook-due": "dev-master"
+        "campaignchain/core": "1.0.x-dev",
+        "campaignchain/location-mailchimp": "1.0.x-dev",
+        "campaignchain/operation-mailchimp": "1.0.x-dev",
+        "campaignchain/hook-due": "1.0.x-dev"
     },
     "autoload": {
         "psr-4": { "CampaignChain\\Activity\\MailChimpBundle\\": "" }
